Fri May 17 19:18:24 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-matching-char): Do not put
	  a closing quote when the quote typed does not start a string, as
	  in $', ?\' or ?\".

Fri May 17 18:06:15 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Consider error messages to find out version option of
	  C compiler.
	  The C compiler of Sun Studio C emits "Warning: Option -qversion
	  passed to ld, if ld is invoked, ignored otherwise" and exit
	  successfully.

Fri May 17 17:34:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_guarded_ptr): unoptimize on other compilers than gcc and
	  msvc.

Fri May 17 11:06:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_intern.h (TH_PUSH_TAG): ensure jmpbuf to be accessible before
	  pushing tag to get rid of unaccessible tag by stack overflow.

Thu May 16 17:15:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_eval.c (rb_catch_obj): add volatile to tag to prevent crash
	  experimentally.
	  http://www.rubyist.net/~akr/chkbuild/debian/ruby-trunk/log/20130515T133500Z.log.html.gz

Thu May 16 16:19:50 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (verconf.in): no longer used.

	* win32/Makefile.sub (config.status): fix typo.

	* configure.in, template/verconf.h.in (RUBY_EXEC_PREFIX): fix for
	  default prefix.

Thu May 16 13:12:27 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/verconf.h.in: generate verconf.h from the template and
	  rbconfig.rb.

Thu May 16 05:47:18 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: fix syntax error.
	  Thanks @spastorino! [ruby-core:55011]

Thu May 16 03:05:45 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_node_newnode): use newobj_of() instead of rb_newobj().

Thu May 16 02:03:39 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/depend: Add a dependency for ifaddr.o.

Thu May 16 01:44:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
